tests/golden/type_errors/generic_struct_method_impl_name.cd
struct Box<T> { value: T }

impl Box<U> {
  fun get(): U {
    return this.value;
  }
}
