tests/golden/type_errors/generic_struct_method_impl_name.err
Type error at 3:10: impl type parameter `U` must bind struct type parameter `T`
  impl Box<U> {
           ^
